--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ dist
 node_modules
 .vscode-test/
 *.vsix
+
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
