--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "dependencies": {
+    "@vscode/prompt-tsx": "^0.3.0-alpha.22"
+  }
 }
